--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -22,6 +22,7 @@
             <div class="row">
                 <div class="col-md-4"></div>
                 <div class="col-md-4">
+                    <h2 style="color: white; font-family: 'Comic Sans MS';">Run your Regular Expressions</h2>
                     <div class="row">
                       <div class="col-9">
                         <input type="text" name="expression" placeholder="Regular Expression" class="form-control">
